infra/k8s/event-command-svr-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-command-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-command
  template:
    metadata:
      labels:
        app: event-command
    spec:
      containers:
        - name: event-command
          image: nlhkha03/event-command
---
apiVersion: v1
kind: Service
metadata:
  name: event-command-srv
spec:
  selector:
    app: event-command
  ports:
    - name: event-command
      protocol: TCP
      port: 3000
      targetPort: 3000
