infra/k8s/mongodb-event-query-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-event-query-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb-event-query
  template:
    metadata:
      labels:
        app: mongodb-event-query
    spec:
      containers:
        - name: mongodb-event-query
          image: mongo:latest
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongodb-event-query-storage
              mountPath: /data/db
      volumes:
        - name: mongodb-event-query-storage
          persistentVolumeClaim:
            claimName: mongodb-event-query-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-event-query-srv
spec:
  selector:
    app: mongodb-event-query
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
