infra/k8s/postgres-auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-auth
  template:
    metadata:
      labels:
        app: postgres-auth
    spec:
      containers:
        - name: postgres-auth
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
          - name: postgres-auth-storage
            mountPath: /var/lib/postgresql/data
      volumes:
      - name: postgres-auth-storage
        persistentVolumeClaim:
          claimName: postgres-auth-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-auth-srv
spec:
  type: NodePort
  ports:
    - name: db
      protocol: TCP
      port: 5432
      targetPort: 5432
      nodePort: 31421
  selector:
    app: postgres-auth
