infra/k8s/postgres-user-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-user-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-user
  template:
    metadata:
      labels:
        app: postgres-user
    spec:
      containers:
        - name: postgres-user
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
          - name: postgres-user-storage
            mountPath: /var/lib/postgresql/data
      volumes:
      - name: postgres-user-storage
        persistentVolumeClaim:
          claimName: postgres-user-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-user-srv
spec:
  type: NodePort
  ports:
    - name: db
      protocol: TCP
      port: 5432
      targetPort: 5432
      nodePort: 31422
  selector:
    app: postgres-user
